# Temporal_Trend_skill

./: README.md
Temporal_Trend_skill/: README.md  SKILL.md  pyproject.toml
Temporal_Trend_skill/examples/: current_network.json  history_day1.json  history_day2.json  papers.json
Temporal_Trend_skill/outputs/demo/: network_analysis_with_trends.json  trend_analysis.json  trend_report.md
Temporal_Trend_skill/outputs/demo2/: network_analysis_with_trends.json  trend_analysis.json  trend_report.md
Temporal_Trend_skill/src/skill_c_trends/: __init__.py  cli.py  extract.py  io.py  metrics.py  models.py  pipeline.py  viz.py
Temporal_Trend_skill/tests/: test_cli.py  test_pipeline.py
