[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-c-temporal-trend"
version = "0.1.0"
description = "StudyClawHub Skill C for temporal emerging-community and trend detection over arXiv research networks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
skill-c-trends = "skill_c_trends.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
